--- a/bin/index.html
+++ b/bin/index.html
@@ -14,5 +14,5 @@
 
     <title>Zorroa</title>
   </head>
-  <body><script type="text/javascript" src="/static/js/app.bundle.js"></script></body>
+  <body><script type="text/javascript" src="/static/js/app.bundle.js?7d4727212393dbf90d32"></script></body>
 </html>
