EVI-563, EVI-564: Enhance signin, signout and password reset flows (#866)
* Package cleanups

* Checkpoint commit

* Add initial test for forgot password

* Finish tests

* Fix forgot password depenedcy references

* Remove onboarding

* Remove unused var

* Update snapshot to reflect new spec from Amber

* Add an intensity bar component

* Add a library to measure password strength

* Make password reset request

* Fix tests

* Refactor to support unit testing

* Checkpoint commit

* Use simpler regex validator

* Remove unused variable

* Update snapshots

* Avoid reloading app when doing an SPA logout

* Break ZXCVBN in to seperate chunks

* More tests

* Adds signin tests

* Update index.html

* Update FlashMessage.scss

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <title>Zorroa</title>
       </head>
       <body>
-        <script type="application/javascript" src="/bundle.js?undefined"></script>
+        <script type="application/javascript" src="/app.js"></script>
       </body>
     </html>
